# integrate-rs

./: Cargo.toml  README.md  build.rs
examples/: pendulum.rs
integrate/: Cargo.toml
integrate/examples/: pendulum.rs
integrate/src/: lib.rs  matrix.rs  odepack.rs  radau.rs
integrate/src/odepack/: lsode.rs  lsodi.rs  mid.rs
integrate/src/radau/: mid.rs
integrate/tests/: solve_ode.rs  solve_radau.rs
odepack-sys/: Cargo.toml  build.rs
odepack-sys/src/: lib.rs  opkda2.f  part_linpack.f
radau-sys/: Cargo.toml  build.rs
radau-sys/src/: lib.rs
src/: dlsode.rs  dlsodes.rs  lib.rs  odepack.rs  part_blas.f  radau.rs
src/dlsode/: low.rs  mid.rs
src/odepack/: high.rs  low.rs  lsode.rs  lsodi.rs  mid.rs
src/radau/: low.rs  mid.rs
tests/: direct_call.rs  solve_ode.rs
