[package]
name = "integrate"
version = "0.1.0"
license = "MIT"
edition = "2018"
repository = "https://github.com/kshkss/integrate-rs.git"
description = "Library to compute one-dimensional integrals and to solve systems of ODEs and DAEs numerically."
homepage = "https://github.com/kshkss/integrate-rs.git"
build = "build.rs"
categories = ["science", "mathematics"]
keywords = ["ODE", "DAE"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
system-libffi = ["libffi/system"]
latest-gcc = []

[dependencies]
lazy_static = "1.4.0"
libc = "0.2"
libffi = "1"
ndarray = "0.14"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
approx = "0.5.0"
