[package]
name = "integrate"
version = "0.4.2"
license = "MIT"
edition = "2018"
repository = "https://github.com/kshkss/integrate-rs.git"
description = "Library to compute one-dimensional integrals and to solve systems of ODEs and DAEs numerically."
homepage = "https://github.com/kshkss/integrate-rs.git"
categories = ["science", "mathematics"]
keywords = ["ODE", "DAE"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
lapack = ["radau-sys/lapack"]
blas = ["odepack-sys/blas"]

[dependencies]
libc = "0.2"
ndarray = "0.15"
odepack-sys = { version = "0.1.0", path = "../odepack-sys" }
once_cell = "1.17.1"
radau-sys = { version = "0.1.0", path = "../radau-sys" }

[dev-dependencies]
approx = "0.5.0"
ndarray = "0.15"
